v1.0.0/modules/schema/pages/class/AssetDeployment.adoc
= `AssetDeployment`
:toclevels: 4


+++Deployment of asset deployment in a power system resource role.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:AssetDeployment`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`AssetDeployment`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
AssetDeployment {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DeploymentDate {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



BaseVoltage {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




AssetDeployment -> DeploymentDate: deploymentDate


AssetDeployment -> BaseVoltage: BaseVoltage


AssetDeployment -> Asset: Asset


AssetDeployment -> DiagramObject: DiagramObjects


AssetDeployment -> InstanceSet: InstanceSet


AssetDeployment -> Name: Names


AssetDeployment -> ChangeSetMember: PropertiesCIMDataObject


AssetDeployment -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<BaseVoltage,`BaseVoltage`>>
| 1
| xref::class/BaseVoltage.adoc[`BaseVoltage`]
| +++Base voltage of this network asset deployment.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Asset,`Asset`>>
| 0..1
| xref::class/Asset.adoc[`Asset`]
| +++Asset in this deployment.+++

| <<breakerApplication,`breakerApplication`>>
| 0..1
| xref::enumeration/BreakerApplicationKind.adoc[`BreakerApplicationKind`]
| +++Type of network role breaker is playing in this deployment (applies to breaker assets only).+++

| <<deploymentDate,`deploymentDate`>>
| 0..1
| xref::class/DeploymentDate.adoc[`DeploymentDate`]
| +++Dates of asset deployment.+++

| <<deploymentState,`deploymentState`>>
| 0..1
| xref::enumeration/DeploymentStateKind.adoc[`DeploymentStateKind`]
| +++Current deployment state of asset.+++

| <<facilityKind,`facilityKind`>>
| 0..1
| xref::enumeration/FacilityKind.adoc[`FacilityKind`]
| +++Kind of facility (like substation or pole or building or plant or service center) at which asset deployed.+++

| <<likelihoodOfFailure,`likelihoodOfFailure`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Likelihood of asset failure on a scale of 1(low) to 100 (high).+++

| <<transformerApplication,`transformerApplication`>>
| 0..1
| xref::enumeration/TransformerApplicationKind.adoc[`TransformerApplicationKind`]
| +++Type of network role transformer is playing in this deployment (applies to transformer assets only).+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Asset]
=== `Asset`
+++Asset in this deployment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#BaseVoltage]
=== `BaseVoltage`
+++Base voltage of this network asset deployment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.BaseVoltage`
| Cardinality
| 1
| Type
| xref::class/BaseVoltage.adoc[`BaseVoltage`]


|===

//[discrete]
[#breakerApplication]
=== `breakerApplication`
+++Type of network role breaker is playing in this deployment (applies to breaker assets only).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.breakerApplication`
| Cardinality
| 0..1
| Type
| xref::enumeration/BreakerApplicationKind.adoc[`BreakerApplicationKind`]


|===

//[discrete]
[#deploymentDate]
=== `deploymentDate`
+++Dates of asset deployment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.deploymentDate`
| Cardinality
| 0..1
| Type
| xref::class/DeploymentDate.adoc[`DeploymentDate`]


|===

//[discrete]
[#deploymentState]
=== `deploymentState`
+++Current deployment state of asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.deploymentState`
| Cardinality
| 0..1
| Type
| xref::enumeration/DeploymentStateKind.adoc[`DeploymentStateKind`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#facilityKind]
=== `facilityKind`
+++Kind of facility (like substation or pole or building or plant or service center) at which asset deployed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.facilityKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/FacilityKind.adoc[`FacilityKind`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#likelihoodOfFailure]
=== `likelihoodOfFailure`
+++Likelihood of asset failure on a scale of 1(low) to 100 (high).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.likelihoodOfFailure`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#transformerApplication]
=== `transformerApplication`
+++Type of network role transformer is playing in this deployment (applies to transformer assets only).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.transformerApplication`
| Cardinality
| 0..1
| Type
| xref::enumeration/TransformerApplicationKind.adoc[`TransformerApplicationKind`]


|===


