v1.1.0/modules/schema/pages/class/AssetDeployment.adoc
= `AssetDeployment`
:toclevels: 4


+++Deployment of asset deployment in a power system resource role.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:AssetDeployment`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`AssetDeployment`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Asset,`Asset`>>
//| [[slots_table.Asset]]<<Asset,`Asset`>>
| 0..1 +
xref::class/Asset.adoc[`Asset`]
| +++Asset in this deployment.+++
| _n/a_

| <<BaseVoltage,`BaseVoltage`>>
//| [[slots_table.BaseVoltage]]<<BaseVoltage,`BaseVoltage`>>
| 1 +
xref::class/BaseVoltage.adoc[`BaseVoltage`]
| +++Base voltage of this network asset deployment.+++
| _n/a_

| <<breakerApplication,`breakerApplication`>>
//| [[slots_table.breakerApplication]]<<breakerApplication,`breakerApplication`>>
| 0..1 +
xref::enumeration/BreakerApplicationKind.adoc[`BreakerApplicationKind`]
| +++Type of network role breaker is playing in this deployment (applies to breaker assets only).+++
| _n/a_

| <<deploymentDate,`deploymentDate`>>
//| [[slots_table.deploymentDate]]<<deploymentDate,`deploymentDate`>>
| 0..1 +
xref::class/DeploymentDate.adoc[`DeploymentDate`]
| +++Dates of asset deployment.+++
| _n/a_

| <<deploymentState,`deploymentState`>>
//| [[slots_table.deploymentState]]<<deploymentState,`deploymentState`>>
| 0..1 +
xref::enumeration/DeploymentStateKind.adoc[`DeploymentStateKind`]
| +++Current deployment state of asset.+++
| _n/a_

| <<facilityKind,`facilityKind`>>
//| [[slots_table.facilityKind]]<<facilityKind,`facilityKind`>>
| 0..1 +
xref::enumeration/FacilityKind.adoc[`FacilityKind`]
| +++Kind of facility (like substation or pole or building or plant or service center) at which asset deployed.+++
| _n/a_

| <<likelihoodOfFailure,`likelihoodOfFailure`>>
//| [[slots_table.likelihoodOfFailure]]<<likelihoodOfFailure,`likelihoodOfFailure`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Likelihood of asset failure on a scale of 1(low) to 100 (high).+++
| _n/a_

| <<transformerApplication,`transformerApplication`>>
//| [[slots_table.transformerApplication]]<<transformerApplication,`transformerApplication`>>
| 0..1 +
xref::enumeration/TransformerApplicationKind.adoc[`TransformerApplicationKind`]
| +++Type of network role transformer is playing in this deployment (applies to transformer assets only).+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Asset]
=== `Asset`
+++Asset in this deployment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Asset,&#10548;>>
--
////


//[discrete]
[#BaseVoltage]
=== `BaseVoltage`
+++Base voltage of this network asset deployment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.BaseVoltage`
| Cardinality
| 1
| Type
| xref::class/BaseVoltage.adoc[`BaseVoltage`]


|===

////
[.text-left]
--
<<slots_table.BaseVoltage,&#10548;>>
--
////


//[discrete]
[#breakerApplication]
=== `breakerApplication`
+++Type of network role breaker is playing in this deployment (applies to breaker assets only).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.breakerApplication`
| Cardinality
| 0..1
| Type
| xref::enumeration/BreakerApplicationKind.adoc[`BreakerApplicationKind`]


|===

////
[.text-left]
--
<<slots_table.breakerApplication,&#10548;>>
--
////


//[discrete]
[#deploymentDate]
=== `deploymentDate`
+++Dates of asset deployment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.deploymentDate`
| Cardinality
| 0..1
| Type
| xref::class/DeploymentDate.adoc[`DeploymentDate`]


|===

////
[.text-left]
--
<<slots_table.deploymentDate,&#10548;>>
--
////


//[discrete]
[#deploymentState]
=== `deploymentState`
+++Current deployment state of asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.deploymentState`
| Cardinality
| 0..1
| Type
| xref::enumeration/DeploymentStateKind.adoc[`DeploymentStateKind`]


|===

////
[.text-left]
--
<<slots_table.deploymentState,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#facilityKind]
=== `facilityKind`
+++Kind of facility (like substation or pole or building or plant or service center) at which asset deployed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.facilityKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/FacilityKind.adoc[`FacilityKind`]


|===

////
[.text-left]
--
<<slots_table.facilityKind,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#likelihoodOfFailure]
=== `likelihoodOfFailure`
+++Likelihood of asset failure on a scale of 1(low) to 100 (high).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.likelihoodOfFailure`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.likelihoodOfFailure,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#transformerApplication]
=== `transformerApplication`
+++Type of network role transformer is playing in this deployment (applies to transformer assets only).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetDeployment.transformerApplication`
| Cardinality
| 0..1
| Type
| xref::enumeration/TransformerApplicationKind.adoc[`TransformerApplicationKind`]


|===

////
[.text-left]
--
<<slots_table.transformerApplication,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Asset.adoc[`Asset`] | xref::class/Asset.adoc#AssetDeployment[`AssetDeployment`]



| xref::class/BaseVoltage.adoc[`BaseVoltage`] | xref::class/BaseVoltage.adoc#NetworkAssetDeployment[`NetworkAssetDeployment`]


|===

